# lot49

./: .gitignore  CMakeLists.txt  ImpliedTransaction.cpp  ImpliedTransaction.hpp  Ledger.cpp  Ledger.hpp  MeshNode.cpp  MeshNode.hpp  Utils.cpp  Utils.hpp  lot49.cpp  readme.md
doc/: transmission_overhead.md
